# evaris

./: .gitignore  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: python-ci.yml
apps/platform/: README.md  package.json
evaris/: __init__.py  agent_interface.py  client.py  contamination.py  dataset.py  evaluate.py  retry.py  tracing.py  types.py
evaris-server/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
evaris-server/prisma/: init.sql  schema.prisma
evaris-server/src/evaris_server/: __init__.py  app.py  config.py
evaris-server/src/evaris_server/api/: __init__.py  routes.py  schemas.py
evaris-server/src/evaris_server/db/: __init__.py  client.py
evaris-server/src/evaris_server/middleware/: __init__.py  auth.py
evaris-server/src/evaris_server/services/: __init__.py  runner.py
evaris-server/tests/: __init__.py  conftest.py
evaris-server/tests/integration/: __init__.py  test_assess.py  test_health.py  test_log.py  test_trace.py
evaris-server/tests/unit/: __init__.py  test_auth.py  test_database.py  test_schemas.py
evaris/core/: __init__.py  protocols.py  registry.py  types.py
evaris/metrics/: __init__.py  answer_match.py  base.py  context_relevance.py  exact_match.py  faithfulness.py  semantic_similarity.py  unit_test.py
evaris/providers/: __init__.py  base.py  factory.py  openrouter.py
evaris/wrappers/: conversation.py  langchain.py
examples/: README.md
examples/chatbot-evaluation/: .env.example  .gitignore  README.md  chatbot.py  evaluate_chatbot.py  requirements.txt  (+1 more)
tests/: conftest.py
(+100 files in other folders)
